# lossless-image-compression

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  compress.cpp  decompress.cpp  entropy_gap.cpp  fetch_deps.sh  plot_histograms.py  range_coder.hpp  test_range_coder  test_range_coder.cpp  ycocg.hpp
web/: build.sh  codec.cpp  hello.js  hello.wasm  index.html  package-lock.json  package.json
web/app/: page.tsx
web/public/: codec.js  codec.wasm
